Super bad skeleton of model

--- a/src/reproduce_FD.ipynb
+++ b/src/reproduce_FD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,6 +171,70 @@
     "c_T = 0.86\n",
     "c_l = 0.64\n",
     "mean_spacings = extended_corridor_df['MEAN_SPACING'].unique()\n",
+    "fd_res = []\n",
+    "for m_s in mean_spacings:\n",
+    "    fd_res.append(fd_exec(m_s, c_v0, c_T, c_l))\n",
+    "plt.scatter(mean_spacing, speed, s=1)\n",
+    "plt.scatter(mean_spacings, fd_res, s=1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\numpy\\core\\_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bottleneck_file = \"../data/Pedestrian_Trajectories/Bottleneck_Data/uo-180-070.txt\"\n",
+    "extended_bottleneck_df = create_complete_dataframe(bottleneck_file)\n",
+    "extended_bottleneck_df['MEAN_SPACING'] = extended_bottleneck_df['MEAN_SPACING'].astype(float)\n",
+    "\n",
+    "extended_corridor_df.to_pickle(\"../data/extended_corridor_df\")\n",
+    "speed = extended_corridor_df['SPEED'].to_numpy()\n",
+    "mean_spacing = extended_corridor_df['MEAN_SPACING'].to_numpy()\n",
+    "plt.scatter(mean_spacing, speed, s=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extended_bottleneck_df.to_pickle(\"../data/extended_bottleneck_df\")\n",
+    "speed = extended_bottleneck_df['SPEED'].to_numpy()\n",
+    "mean_spacing = extended_bottleneck_df['MEAN_SPACING'].to_numpy()\n",
+    "c_v0 = 1.64\n",
+    "c_T = 0.49\n",
+    "c_l = 0.61\n",
+    "mean_spacings = extended_bottleneck_df['MEAN_SPACING'].unique()\n",
     "fd_res = []\n",
     "for m_s in mean_spacings:\n",
     "    fd_res.append(fd_exec(m_s, c_v0, c_T, c_l))\n",
