near to desperation (but nearer to dinner)

--- a/src/attempts/compare_FD_params_vadere.ipynb
+++ b/src/attempts/compare_FD_params_vadere.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FD PARAMETER COMPARISON (ON VADERE DATASET)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -47,9 +54,17 @@
     }
    ],
    "source": [
+    "# plot vadere dataset\n",
     "fd_data, fd_targets = read_dataset(data_path, fd_training=True)\n",
     "plt.scatter(fd_data, fd_targets, s=1)  # original data\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FIT FD MODEL ON OBSERVATIONS"
    ]
   },
   {
@@ -201,6 +216,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VISUALIZE PARAMETERS FITTING EFFECT BATCH AFTER BATCH (FIT ON OBSERVATIONS)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -219,6 +241,7 @@
     }
    ],
    "source": [
+    "fd1_params = model.FD_model_parameters\n",
     "fd1_params['t'] = np.array([model.FD_model_parameters['t'][i] for i in range(len(model.FD_model_parameters['t']))]).flatten()\n",
     "fd1_params['l'] = np.array([model.FD_model_parameters['l'][i] for i in range(len(model.FD_model_parameters['l']))]).flatten()\n",
     "fd1_params['v0'] = np.array([model.FD_model_parameters['v0'][i] for i in range(len(model.FD_model_parameters['v0']))]).flatten()\n",
@@ -228,6 +251,13 @@
     "plt.scatter(range(fd1_params['v0'].shape[0]), fd1_params['v0'], s=1, label='v0')\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CREATE PREDICTIONS  AND FIT AN FD MODEL ON THEM"
    ]
   },
   {
@@ -434,13 +464,7 @@
       "31/31 [==============================] - 0s 821us/step - loss: 0.1170\n",
       "Epoch 97/1000\n",
       "31/31 [==============================] - 0s 874us/step - loss: 0.1169\n",
-      "Epoch 98/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 98/1000\n",
       "31/31 [==============================] - 0s 855us/step - loss: 0.1170\n",
       "Epoch 99/1000\n",
       "31/31 [==============================] - 0s 821us/step - loss: 0.1169\n",
@@ -671,18 +695,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fd2_params = model2.FD_model_parameters"
+    "### VISUALIZE PARAMETERS FITTING EFFECT BATCH AFTER BATCH (FIT ON PREDICTIONS)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -698,6 +722,7 @@
     }
    ],
    "source": [
+    "fd2_params = model2.FD_model_parameters\n",
     "fd2_params['t'] = np.array([model2.FD_model_parameters['t'][i] for i in range(len(model2.FD_model_parameters['t']))]).flatten()\n",
     "fd2_params['l'] = np.array([model2.FD_model_parameters['l'][i] for i in range(len(model2.FD_model_parameters['l']))]).flatten()\n",
     "fd2_params['v0'] = np.array([model2.FD_model_parameters['v0'][i] for i in range(len(model2.FD_model_parameters['v0']))]).flatten()\n",
@@ -707,6 +732,13 @@
     "plt.scatter(range(fd2_params['v0'].shape[0]), fd2_params['v0'], s=1, label='v0')\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### COMPARE RESULTS"
    ]
   },
   {
