--- a/src/attempts/datasets_visualized.ipynb
+++ b/src/attempts/datasets_visualized.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NOTEBOOK TO EASILY VISUALIZE ALL USEFUL DATASETS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,6 +16,13 @@
     "from utilities import plot_fd_and_original, plot_fd_and_speeds\n",
     "import logging\n",
     "logging.getLogger('tensorflow').setLevel(logging.WARNING)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PLOT THE ORIGINAL DATASET (WITH FD FITTED)"
    ]
   },
   {
@@ -110,9 +124,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PLOT THE PREDICTIONS (WITH FITTING)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
